llama3-8b-vllm-neuron.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-vllm-neuron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama-vllm-neuron
  template:
    metadata:
      labels:
        app: llama-vllm-neuron
    spec:
      tolerations:
      - key: "aws.amazon.com/neuron"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      nodeSelector:
        node.kubernetes.io/instance-type: inf2.xlarge
        karpenter.sh/capacity-type: on-demand
      containers:
      - name: neuron-llm
        image: public.ecr.aws/j4m3t0a6/vllm-neuron:latest
        args:
          - "--host=0.0.0.0"
          - "--port=8000"
          - "--model"
          - "NousResearch/Meta-Llama-3.1-8B-Instruct"
          - "--tensor-parallel-size"
          - "2" 
          - "--max-num-seqs"
          - "2"
          - "--max-model-len"
          - "8192"
          - --enable-auto-tool-choice
          - --tool-call-parser=llama3_json
          - --chat-template=/workspace/vllm/examples/tool_chat_template_llama3.1_json.jinja
        resources:
          limits:
            cpu: "3"
            memory: "12Gi"
            aws.amazon.com/neuron: "1"
          requests:
            cpu: "3"
            memory: "12Gi"
            aws.amazon.com/neuron: "1"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: llama-vllm-neuron
spec:
  selector:
    app: llama-vllm-neuron
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
