langfuse-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: langfuse-alb
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: eks.amazonaws.com/alb
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    name: langfuse-alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: langfuse-web-ingress-alb
  namespace: default
spec:
  ingressClassName: langfuse-alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: langfuse-web
            port:
              number: 3000
